last section small mistakes fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,8 +177,9 @@ header{
 .inp{
     border: none;
     border-radius: 5px 0px 0px 5px;
-    padding: 11px;
+    padding: 10px;
     width: ;
+    background-color: rgba(128, 128, 128, 0.548);
 }
 .header-end{
     border: none;
